# src/shared/infra/http/routes/cars.routes.ts
@@ -1,4 +1,5 @@
 import { CreateCarController } from '@modules/cars/useCases/createCar/CreateCarController';
+import { CreateCarSpecificationController } from '@modules/cars/useCases/createCarSpecification/CreateCarSpecificationController';
 import { ListAvailablesCarsController } from '@modules/cars/useCases/listAvailablesCars/ListAvailablesCarsController';
 import { ListCarsController } from '@modules/cars/useCases/listCars/ListCarsController';
 import { Router } from 'express';
@@ -9,6 +10,7 @@ import { ensureAuthenticated } from '../middlewares/ensureAuthenticated';
 const carsRoutes = Router();
 const createCarController = new CreateCarController();
 const listCarsController = new ListCarsController();
+const createCarSpecification = new CreateCarSpecificationController();
 const listAvailablesCarsController = new ListAvailablesCarsController();
 
 carsRoutes.get('/availables', listAvailablesCarsController.handle);
@@ -17,6 +19,7 @@ carsRoutes.use(ensureAuthenticated);
 carsRoutes.use(ensureAdmin);
 
 carsRoutes.post('/', createCarController.handle);
+carsRoutes.patch('/specifications/:id', createCarSpecification.handle);
 carsRoutes.get('/', listCarsController.handle);
 
 export { carsRoutes };
